--- a/app/src/main/res/xml/host_settings.xml
+++ b/app/src/main/res/xml/host_settings.xml
@@ -6,6 +6,10 @@
             android:key="@string/key_always_true_answer"
             android:summary="手写输入识别结果永远为正确答案"
             android:title="一切输入视为正确答案" />
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="@string/key_double_nickname_length"
+            android:title="双倍昵称长度" />
     </PreferenceCategory>
     <PreferenceCategory android:title="练习">
         <SwitchPreference
