add remove character restrictions on nickname

--- a/app/src/main/res/xml/host_settings.xml
+++ b/app/src/main/res/xml/host_settings.xml
@@ -10,6 +10,11 @@
             android:defaultValue="true"
             android:key="@string/key_double_nickname_length"
             android:title="双倍昵称长度" />
+        <SwitchPreference
+            android:defaultValue="false"
+            android:title="解除昵称字符限制"
+            android:key="@string/key_remove_restriction_on_nickname"
+            android:summary="开启后，昵称可以使用任意非空白字符" />
     </PreferenceCategory>
     <PreferenceCategory android:title="练习">
         <SwitchPreference
